# camp

./: .gitignore  .gitmodules  CHANGES.txt  Makefile  README.txt  api.ml  api.mli  app.ml  bin.ml  bin.mli  camp.opam  config.ml  config.mli  control.ml  control.mli  crash.opam  data.ml  db.ml  dune  dune-project  edit.ml  edit.mli  file.ml  file.mli  filesel.ml  filesel.mli  layout.ml  library.ml  library.mli  log.ml  log.mli  main.ml  menu.ml  menu.mli  persist.ml  playlist.ml  playlist.mli  query.ml  query.mli  run_browser.ml  (+27 more)
.github/workflows/: build.yml
assets/: sdf_l.fs  sdf_s.fs  vertex.fs
config/: config.ml  dune
img/: README.md
lib_audio_file/: dune  file.ml  file.mli  flac.ml  format.ml  format.mli  id3v1.ml  id3v1.mli  id3v2.ml  jpeg.ml  jpeg.mli  m3u.ml  m3u.mli  meta.ml  meta.mli  mp3.ml  mp3.mli  opus.ml  png.mli  unicode.ml  unicode.mli  vorbis.ml  vorbis.mli  wav.ml  wav.mli
platform/mac/: Info.plist  run.scpt
platform/mac/Contents/: Info.plist
platform/mac/MacOS/: run.sh
platform/win/: icon.rc
src/: api.ml  api.mli  app.ml  control.ml  control.mli  data.ml  dune  edit.ml  edit.mli  filesel.ml  geometry.ml  layout.ml  library.ml  library.mli  log.ml  main.ml  menu.mli  playlist.ml  playlist.mli  query.ml  query.mli  run_control.ml  run_control.mli  run_filesel.ml  run_filesel.mli  run_library.ml  run_menu.ml  run_menu.mli  run_playlist.ml  run_playlist.mli  run_view.ml  run_view.mli  safe_queue.ml  spectrum.ml  spectrum.mli  state.ml  storage.ml  storage.mli  table.ml  table.mli  (+6 more)
src/config/: config.ml
src/lib_audio_file/: base64.ml  base64.mli  file.ml  file.mli  flac.ml  flac.mli  format.ml  id3v1.ml  id3v2.mli  m3u.ml  meta.ml  meta.mli  mp3.ml  ogg.ml  ogg.mli  opus.mli  png.ml  unicode.ml  unicode.mli  vorbis.ml  wav.ml
