opam-version: "2.0"
synopsis: "Camp"
description: "A music player"
authors: ["Andreas Rossberg"]
license: "CC-BY-NC-SA-4.0"
homepage: "https://github.com/rossberg/camp"
doc: "https://github.com/rossberg/camp/blob/main/README.txt"
bug-reports: "https://github.com/rossberg/camp/issues"
depends: [
  "ocaml" {>= "5.04"}
  "dune" {>= "3.20"}
  "raylib" {>= "1.6.0"}
  "raylib-callbacks" {>= "1.6.0"}
  "uunf"
  "uucp"
  "confero"
  "directories"
]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/rossberg/camp.git"
x-maintenance-intent: ["(latest)"]
