(executable
  (public_name kamp)
  (name main)
  (modules
    safe_queue
    edit table
    data track query text bin storage
    control playlist library filesel log menu config
    api ui layout
    state app
    run_menu run_filesel run_control run_view run_library run_playlist
    main
  )
  (libraries unix directories raylib sqlite3 camomile audio_file)
  (link_deps (include link_deps.sexp))
  (link_flags (:include link_flags.sexp))
)

(rule
  (targets link_deps.sexp link_flags.sexp)
  (action (run ./config/config.exe))
)

(rule
  (targets icon.res)
  (action (run x86_64-w64-mingw32-windres ../../platform/win/icon.rc -O coff -o icon.res))
)
